created trivia page navigation, added buttons and elements

--- a/views/index.html
+++ b/views/index.html
@@ -13,5 +13,8 @@
         <p>The perfect website for any situation - if you're bored, play a random trivia game. If you need to study, make your own flascards!</p>
         
     </div>
+
+    <button id = "solotrivia"  onclick="window.location.href='solotrivia.html'">Play Trivia!</button>
+    <button id = "home"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
 </body>
 </html>
