more changes idr what

--- a/views/index.html
+++ b/views/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Quest</title>
     <link rel="stylesheet" href="public/style.css">
-
 </head>
 <body>
-    <div>
+    <!-- <div> -->
         <h1>Welcome to Quiz Quest!</h1>
         <p>The perfect website for any situation - if you're bored, play a random trivia game. If you need to study, make your own flascards!</p>
         
-    </div>
+        <div class = "button-container">
+            <a href=></button>
+        </div>
+    <!-- </div> -->
 </body>
 </html>
