--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+
     <title>Quiz Quest</title>
     <link rel="stylesheet" href="public/style.css">
 </head>
@@ -15,5 +21,13 @@
 
     <button id = "solotrivia"  onclick="window.location.href='solotrivia.html'">Play Trivia!</button>
     <button id = "home"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
+
+
+
+
+
+      <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+
 </body>
 </html>
