--- a/views/uploadnotes.html
+++ b/views/uploadnotes.html
@@ -9,7 +9,7 @@
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <title>metube</title>
+       <title>Play Trivia against your Friends</title>
        <!-- Compiled and minified CSS -->
        <link
            rel="stylesheet"
