--- a/views/index.html
+++ b/views/index.html
@@ -19,8 +19,8 @@
         
     </div>
 
-    <button id = "solotrivia"  onclick="window.location.href='solotrivia.html'">Play Trivia!</button>
-    <button id = "home"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
+    <button id = "triviaselect"  onclick="window.location.href='triviaselect.html'">Play Trivia!</button>
+    <button id = "upload flashcards"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
 
 
 
