made all the files for solo/multiplayer, starting to code for api trivia game

--- a/views/triviaselect.html
+++ b/views/triviaselect.html
@@ -14,7 +14,7 @@
         
     </div>
 
-    <button id = "solotrivia"  onclick="window.location.href='triviaselect.html'">Play Trivia!</button>
-    <button id = "multiplayer trivia"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
+    <button id = "solotrivia"  onclick="window.location.href='solo_trivia.html'">Solo Trivia</button>
+    <button id = "multiplayer trivia"  onclick="window.location.href='index.html'">Multiplayer Trivia!</button>
 </body>
 </html>
