new modal on upload

--- a/views/uploadnotes.html
+++ b/views/uploadnotes.html
@@ -22,80 +22,35 @@
    <body>
        <div class="container">
            <div> 
-               <div>
-                   <h1 class= "material-icons large">videocam</h1>
-                   <h1 class=" hleft">metube</h1>
-               </div>
-
-               <button class="btn center modal-trigger right" href="#openform">post video</button>
+            <button data-target="modal1" class="btn modal-trigger">Modal</button>
            </div>
+
+           <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+            <div class="modal-content">
+            <h4>Upload your notes!</h4>
+            <form action="#">
+                <div class="file-field input-field">
+                  <div class="btn">
+                    <span>file</span>
+                    <input type="file">
+                  </div>
+                  <div class="file-path-wrapper">
+                    <input class="file-path validate" type="text">
+                  </div>
+                </div>
+              </form>
+            </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Upload</a>
+        </div>
+  </div>
 
            <div></div>
            <div class="section" id="list">
            <br></br>
 
-           <h3 class = "left" >My Channel</h3>
-               <table>
-                   <tbody>   
-                       <% for (let i = 0; i < feed.length; i++) { %>
-                       <tr>
-                           <td>
-                               <img src="<%=feed[i].image%>" width = 70px>
-                               
-                           </td>
-
-                           <td>
-                               <div><h3 ><%= feed[i].name %></h3></div>
-                               <div><p >Date: <%= feed[i].date %></p></div>
-                               <div><p >Duration: <%= feed[i].duration %> minutes <%= feed[i].duration %> seconds</p></div>
-                           </td>
-                           <td>
-                               <a class="btn" href="/video/<%= feed[i].video_id %>">
-                                   <i class="material-icons ">edit</i>
-                               </a>
-                           </td>
-                           <td>
-                               <a class="btn" href = "/video/<%= feed[i].video_id %>/delete">
-                                   <i class="material-icons ">delete</i>
-                               </a>
-                           </td>
-                       </tr>
-                       <% } %>
-                   </tbody>
-               </table>
-               
-           </div>
-       
-
-           <div class="modal" id="openform" enctype="multipart/form-data">
-               <div class="modal-content">
-                   <h1>upload video</h1>
-                   <form action="/" method = "POST">
-                       <label for="name">title: </label>
-                       <input type="text" id="name" name="name">
-
-                       <label for= "date">date:</label>
-                       <input type = "date" id = "date" name = "date">
-
-                       <div id="drop-zone"> 
-                           <label for = "image">upload thumbnail: </label>
-                           <input type="file" id="image" name="image">
-                         </div> 
-
-                       
-
-
-                       <div class="center">
-                           <input type="submit" value="upload video" class="btn deep-purple lighten-3 ">
-                       </div>
-                       <p>
-
-                       </p>
-                       
-                   </form>
-               </div>
-
-           </div>
+           <h3 class = "left" >Create custom flashcards!</h3>
        
        <!-- Compiled and minified JavaScript -->
        <script
