--- a/views/uploadnotes.html
+++ b/views/uploadnotes.html
@@ -9,6 +9,7 @@
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <script src="uploadnotes.js"></script>
        <title>Play Trivia against your Friends</title>
        <!-- Compiled and minified CSS -->
        <link
@@ -41,8 +42,20 @@
                 </div>
               </form>
             </div>
+
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Upload</a>
+        </div>
+
+        <div id = "flashcards">
+          <style>
+            .flashcards {
+              background-color: red;
+              height: 1500px;
+              width: 1500px;
+            }
+          </style>
+          <a> text</a>
         </div>
   </div>
 
