initializing node.js express server and socket.io connection

--- a/views/multitrivia.html
+++ b/views/multitrivia.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiTrivia</title>
+    
 </head>
 <body>
     
+    <script src = "/socket.io/socket.io.js"></script>
+    <script src = "/multitrivia.js"></script>
 </body>
 </html>
