--- a/views/uploadnotes.html
+++ b/views/uploadnotes.html
@@ -18,10 +18,10 @@
        />
        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
        <!-- <link rel="stylesheet" href="styles.css"> -->
-       <link rel="stylesheet" href="">
+       <link rel="stylesheet" href="uploadnotes.css">
    </head>
    <body>
-       <div class="container">
+      <div class="container">
            <div> 
             <button data-target="modal1" class="btn modal-trigger">Modal</button>
            </div>
@@ -46,24 +46,22 @@
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Upload</a>
         </div>
-
-        <div id = "flashcards">
-          <style>
-            .flashcards {
-              background-color: red;
-              height: 1500px;
-              width: 1500px;
-            }
-          </style>
-          <a> text</a>
-        </div>
-  </div>
-
-           <div></div>
-           <div class="section" id="list">
-           <br></br>
-
-           <h3 class = "left" >Create custom flashcards!</h3>
+      </div>
+      <div></div>
+      <div class="section" id="list">
+      <br></br>
+      <!-- <div>
+        <h3 class = "left" >Create custom flashcards!</h3>
+      </div> -->
+      <br>
+      <br>
+      <!-- see css file -->
+      <div class = "flashcards">
+        <h3>text</h3>
+        <button class = "fbtn"> 
+          definition
+        </button>
+      </div>
        
        <!-- Compiled and minified JavaScript -->
        <script
