--- a/views/multitrivia.html
+++ b/views/multitrivia.html
@@ -7,6 +7,7 @@
     
 </head>
 <body>
+    <h1>MULTITRIVIA PAGE</h1>
     
     <script src = "/socket.io/socket.io.js"></script>
     <script src = "/multitrivia.js"></script>
