--- a/views/solo_trivia.html
+++ b/views/solo_trivia.html
@@ -14,6 +14,14 @@
     <body>
         <div class="container center-align">
             <h1>Welcome to Solo Trivia</h1>
+            <h3>How long do you want your quiz to be?</h3>
+            <div>
+                <button class ="short">short</button>
+                <button class ="medium">short</button>
+                <button class ="long">short</button>
+
+            </div>
+
             <div>
                 <span class = "correct-score"></span>/
                 <span class = "total-questions"></span>
