fixed the bugs in solo trivia

--- a/views/solo_trivia.html
+++ b/views/solo_trivia.html
@@ -16,9 +16,9 @@
             <h1>Welcome to Solo Trivia</h1>
             <h3>How long do you want your quiz to be?</h3>
             <div>
-                <button class ="short">short</button>
-                <button class ="medium">short</button>
-                <button class ="long">short</button>
+                <button onclick="shortQuiz()" class ="short">short</button>
+                <button onclick = "mediumQuiz()" class ="medium">medium</button>
+                <button onclick = "longQuiz()" class ="long">long</button>
 
             </div>
 
