--- a/views/uploadnotes.html
+++ b/views/uploadnotes.html
@@ -26,7 +26,7 @@
             <button data-target="modal1" class="btn modal-trigger">Modal</button>
            </div>
 
-           <!-- Modal Structure -->
+           <!-- Modal Structure for Upload-->
             <div id="modal1" class="modal">
             <div class="modal-content">
             <h4>Upload your notes!</h4>
