--- a/views/triviaselect.html
+++ b/views/triviaselect.html
@@ -14,6 +14,6 @@
     </div>
 
     <button id = "solotrivia"  onclick="window.location.href='solo_trivia.html'">Solo Trivia</button>
-    <button id = "multiplayer trivia"  onclick="window.location.href='index.html'">Multiplayer Trivia!</button>
+    <button id = "multiplayer trivia"  onclick="window.location.href='multitrivia.html'">Multiplayer Trivia!</button>
 </body>
 </html>
