--- a/views/solo_trivia.html
+++ b/views/solo_trivia.html
@@ -8,12 +8,24 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <link rel="stylesheet" href="styles.css" />
         <title>Welcome to Solo Trivia</title>
     </head>
     <body>
         <div class="container center-align">
-            <h1>Welcome to Solo Trivia</h1>
+            <!-- <embed id="bgMusic" src="music.mp3" loop="true" autostart="true" width="2" height="0"> -->
+                <audio id = "bgMusic" autoplay loop>
+                    <source src="music.mp3" type="audio/mpeg">
+                </audio>
+
+                <h1>Welcome to Solo Trivia</h1>
+                <button onclick="toggleMusic()" id="musicToggle">
+                    <i class="material-icons">add</i>
+                
+                </button>
+
             <h3 class="userQuestion">How long do you want your quiz to be?</h3>
             <div>
                 <button onclick="shortQuiz()" class="short">short</button>
