--- a/views/solo_trivia.html
+++ b/views/solo_trivia.html
@@ -22,7 +22,7 @@
 
                 <h1>Welcome to Solo Trivia</h1>
                 <button onclick="toggleMusic()" id="musicToggle">
-                    <i class="material-icons">add</i>
+                    <i class="material-icons">pause_circle_filled</i>
                 
                 </button>
 
