--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-
-    <title>Quiz Quest</title>
-    <link rel="stylesheet" href="public/style.css">
+    <title>stub web</title>
+    <link  rel="stylesheet" type = "text/css" href="index.css"/>
 </head>
+
 <body>
-    <!-- <div> -->
-        <h1>Welcome to Quiz Quest!</h1>
-        <p>The perfect website for any situation - if you're bored, play a random trivia game. If you need to study, make your own flascards!</p>
-        
+
+    <div>
+        <h1 id="mpheading"><img src = "graphics/thestublogo.png"></h1>
     </div>
 
-    <button id = "triviaselect"  onclick="window.location.href='triviaselect.html'">Play Trivia!</button>
-    <button id = "upload flashcards"  onclick="window.location.href='index.html'">Upload Flashcards!</button>
+    <div>
+        <p id="jspp">the bca student hub!</p>
+    </div>
+    
+    <span class="buttoncon">
+        
+            <button id = "to-do" onclick="window.location.href='todo.html'"><img src = "graphics/todowidget.png" style="width:175px;height:auto;"></button>
 
+            <button id = "linkhub" onclick="window.location.href='linkhub.html'"><img src = "graphics/linkhubwidget.png" style="width:175px;height:auto;" ></button>
 
+            <button id = "databases" onclick="window.location.href='databases.html'"><img src = "graphics/databaseswidget.png" style="width:175px;height:auto;"></button>
+       
+            <button id = "grade calculator" onclick="window.location.href='gc.html'"><img src = "graphics/calcwidget.png" style="width:175px;height:auto;"></button>
 
+            <button id = "pomodoro" onclick="window.location.href='pomodoro.html'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
+       
+            
+     
+    </span>
 
-
-      <script type="text/javascript" src="js/materialize.min.js"></script>
 
 </body>
+
+<footer>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+
+    <div class = "btnc">
+        <button id = "github" onclick="window.location.href='https://github.com/liamstrauser/stubweb'"><img src = "graphics/githubwidget.png" style="width:150px;height:auto;"></button>
+    </div>
+
+    <p>thank you for using stub :) - Martina Lipczyk, Liam Strauser, Mia Subrahmanyam, & Yuto Takeda</p>
+    
+</footer>
+
+<script> src="stubhome.js"</script>
+
 </html>
