all stylesheets work

--- a/views/databases.ejs
+++ b/views/databases.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>databases</title>
-    <link  rel="stylesheet" type = "text/css" href="databases.css"/>
+    <link  rel="stylesheet" href="/databases.css"/>
     <style>
         .button-container-div {
             text-align: center;
