--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
 
 <head>
     <title>stub web</title>
-    <link  rel="stylesheet" type = "text/css" href="index.css"/>
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
 
     <div>
-        <h1 id="mpheading"><img src = "graphics/thestublogo.png"></h1>
+        <h1 id="mpheading"><img src = "/graphics/thestublogo.png"></h1>
     </div>
 
     <div>
