--- a/views/linkhub.ejs
+++ b/views/linkhub.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>link hub</title>
-    <link  rel="stylesheet" type = "text/css" href="linkhub.css"/>
+    <link  rel="stylesheet" href="/linkhub.css"/>
     <style>
         .button-container-div {
             text-align: center;
