--- a/views/pomodoro.ejs
+++ b/views/pomodoro.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>pomodoro timer</title>
-    <link  rel="stylesheet" type = "text/css" href="pomo.css"/>
+    <link  rel="stylesheet" href="/pomo.css"/>
 </head>
 <body>
     <div class = "home">
