--- a/views/test.ejs
+++ b/views/test.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>cafe study screen</title>
-    <link  rel="stylesheet" type = "text/css" href="studystyles.css"/>
+    <link  rel="stylesheet" href="/studystyles.css"/>
 </head>
 <body>
     <div class = "home">
