--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>to-do list</title>
-    <link  rel="stylesheet" type = "text/css" href="todo.css"/>
+    <link  rel="stylesheet" href="/todo.css">
     
 </head>
 <body>
