--- a/views/gc.ejs
+++ b/views/gc.ejs
@@ -4,7 +4,7 @@
 
 <head>
     <title>grade calculator</title>
-    <link  rel="stylesheet" type = "text/css" href="gc.css"/>
+    <link  rel="stylesheet" href="/gc.css"/>
 </head>
 
 <body>
