fixed all button locations
Co-authored-by: liamstrauser <liamstrauser@users.noreply.github.com>

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,15 +19,15 @@
     
     <span class="buttoncon">
         
-            <button id = "to-do" onclick="window.location.href='todo.html'"><img src = "graphics/todowidget.png" style="width:175px;height:auto;"></button>
+            <button id = "to-do" onclick="window.location.href='/todo'"><img src = "graphics/todowidget.png" style="width:175px;height:auto;"></button>
 
-            <button id = "linkhub" onclick="window.location.href='linkhub.html'"><img src = "graphics/linkhubwidget.png" style="width:175px;height:auto;" ></button>
+            <button id = "linkhub" onclick="window.location.href='/linkhub'"><img src = "graphics/linkhubwidget.png" style="width:175px;height:auto;" ></button>
 
-            <button id = "databases" onclick="window.location.href='databases.html'"><img src = "graphics/databaseswidget.png" style="width:175px;height:auto;"></button>
+            <button id = "databases" onclick="window.location.href='/databases'"><img src = "graphics/databaseswidget.png" style="width:175px;height:auto;"></button>
        
-            <button id = "grade calculator" onclick="window.location.href='gc.html'"><img src = "graphics/calcwidget.png" style="width:175px;height:auto;"></button>
+            <button id = "grade calculator" onclick="window.location.href='/gc'"><img src = "graphics/calcwidget.png" style="width:175px;height:auto;"></button>
 
-            <button id = "pomodoro" onclick="window.location.href='pomodoro.html'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
+            <button id = "pomodoro" onclick="window.location.href='/pomodoro'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
        
             
      
