--- a/views/gc.ejs
+++ b/views/gc.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <div class = "home">
-        <button id = "home" onclick="window.location.href='../stubhome.html'"><img src = "graphics/thestublogo.png"></button>
+        <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
     </div>
     
     <div>
