--- a/views/pomodoro.ejs
+++ b/views/pomodoro.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class = "home">
-        <button id = "home" onclick="window.location.href='../stubhome.html'"><img src = "graphics/thestublogo.png"></button>
+        <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
     </div>
 
     <div>
