--- a/views/test.ejs
+++ b/views/test.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class = "home">
-        <button id = "home" onclick="window.location.href='../index.html'">home</button>
+        <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
     </div>
     <style>
         .background {
