--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,9 @@
             <button id = "grade calculator" onclick="window.location.href='/gc'"><img src = "graphics/calcwidget.png" style="width:175px;height:auto;"></button>
 
             <button id = "pomodoro" onclick="window.location.href='/pomodoro'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
-       
+            
+            <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
+
             
      
     </span>
@@ -44,7 +46,7 @@
     <p> </p>
 
     <div class = "btnc">
-        <button id = "github" onclick="window.location.href='https://github.com/liamstrauser/stubweb'"><img src = "graphics/githubwidget.png" style="width:150px;height:auto;"></button>
+        <button id = "github" onclick="window.location.href='https://github.com/martinalipczyk/endyear'"><img src = "graphics/githubwidget.png" style="width:150px;height:auto;"></button>
     </div>
 
     <p>thank you for using stub :) - Martina Lipczyk, Liam Strauser, Mia Subrahmanyam, & Yuto Takeda</p>
