making login page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,9 @@
 
             <button id = "pomodoro" onclick="window.location.href='/pomodoro'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
             
-            <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
+            <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'">solo trivia</button>
+
+            <button id = "uploadnotes" onclick="window.location.href='/uploadnotes'">upload notes</button>
 
             
      
