--- a/views/uploadnotes.ejs
+++ b/views/uploadnotes.ejs
@@ -9,7 +9,7 @@
    <head>
        <meta charset="UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <script src="uploadnotes.js"></script>
+       <script src="/uploadnotes.js"></script>
        <title>Play Trivia against your Friends</title>
        <!-- Compiled and minified CSS -->
        <link
@@ -18,7 +18,7 @@
        />
        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
        <!-- <link rel="stylesheet" href="styles.css"> -->
-       <link rel="stylesheet" href="uploadnotes.css">
+       <link rel="stylesheet" href="/uploadnotes.css">
    </head>
    <body>
       <div class="container">
