working on connecting to database
Co-authored-by: liamstrauser <liamstrauser@users.noreply.github.com>

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,17 @@
 <body>
 
     <div>
+        <p style = "text-align: left;">Welcome, <%=username%>!</p>
+        <button style = "text-align: right;">Log Out</button>
+    </div>
+    
+    <div>
         <h1 id="mpheading"><img src = "/graphics/thestublogo.png"></h1>
     </div>
 
     <div>
         <p id="jspp">the bca student hub!</p>
+
     </div>
     
     <span class="buttoncon">
