--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
       <div class="col s12 m6 offset-m3">
         <div class="card">
           <div class="card-content">
-            <span class="card-title">moodwise login</span>
+            <span class="card-title">stub login</span>
             <form id="loginForm" action = "/dologin"  method="post">
               <div class="input-field">
                 <input type="text" id="username" name="username" required>
