--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
     <div>
         <p style = "text-align: left;">Welcome, <%=username%>!</p>
-        <button style = "text-align: right;">Log Out</button>
+        <button onclick = ""style = "text-align: right;">Log Out</button>
     </div>
     
     <div>
