--- a/views/solo_trivia.ejs
+++ b/views/solo_trivia.ejs
@@ -11,9 +11,39 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="databases.css" />
+
         <title>Welcome to Solo Trivia</title>
     </head>
     <body>
+        <div class = "home">
+            <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
+            <div class = "userInfo">
+                <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out of <%=username%></button>
+                <script>
+                    document.getElementById("logoutBtn").addEventListener("click", function() {
+                        // Make an AJAX request to the logout route
+                        fetch("/logout", {
+                            method: "GET",
+                            headers: {
+                                "Content-Type": "application/json"
+                            }
+                        })
+                        .then(response => {
+                            if (response.redirected) {
+                                // Redirect the user to the login page
+                                window.location.href = response.url;
+                            }
+                        })
+                        .catch(error => {
+                            console.error("Error logging out:", error);
+                            // Handle error
+                        });
+                    });
+                    </script>
+                    
+                </div>
+        </div>
         <div class="container center-align">
             <!-- <embed id="bgMusic" src="music.mp3" loop="true" autostart="true" width="2" height="0"> -->
                 <audio id = "bgMusic" autoplay loop>
