--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,6 +67,8 @@
 
             <button id = "uploadnotes" onclick="window.location.href='/uploadnotes'">upload notes</button>
 
+            <button id = "summarize" onclick="window.location.href='/summarize'">summarize notes</button>
+
             
      
     </span>
