upload flashcards works

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="flashcards.css" />
+  <link rel="stylesheet" href="/flashcards.css" />
 </head>
 <body>
 <div class="container">
