--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
             
             <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'">solo trivia</button>
 
-            <button id = "uploadnotes" onclick="window.location.href='/uploadnotes'">upload notes</button>
+            <button id = "flashcards" onclick="window.location.href='/flashcards'">use flashcards</button>
 
             <button id = "summarize" onclick="window.location.href='/summarize'">summarize notes</button>
 
