--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -22,8 +22,10 @@
             <form id = "todoform" action = "/addTask"  method="post">
                 <input class = "input-color" type = "text" id = "txt" placeholder="add tasks">
             </form>
-            <button class = "btn button-color"id="push">add</button>
+            <button class = "btn button-color"id="push" action = "/addTask">add</button>
          </div>
+        
+
 
          <!-- <% try { %>
             <% if (tasks && tasks.length > 0) { %>
