--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>to-do list</title>
+    
     <link rel="stylesheet" href="/todo.css">
 </head>
 <body>
@@ -16,13 +17,15 @@
             <h1>to-do list</h1>
             <p>organize and assess your tasks</p>
             <div class="container">
-                <div id="newtask">
+                <div id="newtask" style="z-index: 1000 !important;">
                     <!-- <form id="todoform" action="/addTask" method="post"> -->
-                        <input class="input-color" type="text" id="txt" placeholder="add tasks">
+                    <input class="input-color" type="text" id="txt" placeholder="add tasks">
                     <!-- </form> -->
                     <button class="btn button-color" id="push">add</button>
+            </div>
+                <div id="tasks">
+
                 </div>
-                <div id="tasks"></div>
             </div>
         </div>
     </div>
