working on todo and flashcards
Co-authored-by: liamstrauser <liamstrauser@users.noreply.github.com>

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -22,6 +22,10 @@
   </div>
 </div>
 
+<div>
+  <input id = "setName" type = "text" placeholder = "Unit 3 Vocab">
+  <button id="saveset">Save Flashcard Set</button>
+</div>
 
 <div class="td-container hide" id="add-term-card">
   <h2>Add Flashcard</h2>
@@ -38,6 +42,7 @@
   <input type="text" id="term" placeholder="Enter Term">
   <label for="defin">Definition:</label>
   <textarea id="defin" placeholder="Enter Definition"></textarea>
+
   <button id="save-btn">Save</button>
 </div>
 
