todo works, working on sets

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,11 +63,11 @@
 
             <button id = "pomodoro" onclick="window.location.href='/pomodoro'"><img src = "graphics/pomowidget.png" style="width:175px;height:auto;"></button>
             
-            <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'">solo trivia</button>
+            <button id = "solo_trivia" onclick="window.location.href='/solo_trivia'"><img src = "graphics/triviaicon.png" style="width:175px;height:auto;"></button>
 
-            <button id = "flashcards" onclick="window.location.href='/flashcards'">use flashcards</button>
+            <button id = "flashcards" onclick="window.location.href='/flashcards'"><img src = "graphics/flashcardicon.png" style="width:175px;height:auto;"></button>
 
-            <button id = "summarize" onclick="window.location.href='/summarize'">summarize notes</button>
+            <button id = "summarize" onclick="window.location.href='/summarize'"><img src = "graphics/notesicon.png" style="width:175px;height:auto;"></button>
 
             
      
