--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -27,6 +27,8 @@
   <button id="saveset">Save Flashcard Set</button>
 </div>
 
+<div> <button id = "displaySetBtn">Select an Existing Set</button> </div>
+
 <div class="td-container hide" id="add-term-card">
   <h2>Add Flashcard</h2>
   <div class="wrapper">
@@ -47,6 +49,6 @@
 </div>
 
 <!-- Script -->
-<script src="flashcards.js"></script>
+<script src="/flashcards.js"></script>
 </body>
 </html>
