--- a/views/solo_trivia.ejs
+++ b/views/solo_trivia.ejs
@@ -18,7 +18,12 @@
     <body>
         <div class = "home">
             <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
+            
             <div class = "userInfo">
+                <button onclick="toggleMusic()" id="musicToggle">
+                    <i class="material-icons">pause_circle_filled</i>
+                
+                </button>
                 <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out of <%=username%></button>
                 <script>
                     document.getElementById("logoutBtn").addEventListener("click", function() {
@@ -49,12 +54,15 @@
                 <audio id = "bgMusic" autoplay loop>
                     <source src="music.mp3" type="audio/mpeg">
                 </audio>
+                <audio id = "correct">
+                    <source src="correct.mp3" type="audio/mpeg">
+                </audio>
+                <audio id = "wrong">
+                    <source src="wrong.mp3" type="audio/mpeg">
+                </audio>
 
                 <h1>Welcome to Solo Trivia</h1>
-                <button onclick="toggleMusic()" id="musicToggle">
-                    <i class="material-icons">pause_circle_filled</i>
                 
-                </button>
 
             <h3 class="userQuestion">How long do you want your quiz to be?</h3>
             <div>
