working on sets and getting the study feature to work

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -15,6 +15,7 @@
   <div class="add-button-container">
     <button id="add-flashcard">Add Flashcard</button>
     <button id="add-notes">Add Notes</button>
+    <button id="study">Study</button>
   </div>
 
   <div id="card-con">
@@ -28,6 +29,7 @@
 </div>
 
 <div> <button id = "displaySetBtn">Select an Existing Set</button> </div>
+
 
 <div class="td-container hide" id="add-term-card">
   <h2>Add Flashcard</h2>
