--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,9 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Login Page</title>
+  <style>
+    body {
+      background-color: #30a474; 
+    }
+    .btn-custom {
+      background-color: #226e4f !important; 
+    }
+    .image-container {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
+
+
+  
 
   <div class="container">
     <div class="row">
@@ -14,7 +34,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">stub login</span>
-            <form id="loginForm" action = "/dologin"  method="post">
+            <form id="loginForm" action="/dologin" method="post">
               <div class="input-field">
                 <input type="text" id="username" name="username" required>
                 <label for="username">Username</label>
@@ -23,14 +43,8 @@
                 <input type="password" id="password" name="password" required>
                 <label for="password">Password</label>
               </div>
-              <button class="btn waves-effect waves-light" type="submit" name="action">login
-                <!-- <i class="material-icons right">send</i> -->
-      
-              </button>
-              <a class="btn waves-effect waves-light" href = "/createaccount">register
-                <!-- <i class="material-icons right">send</i> -->
-                <!-- need to see if pushing works -->
-              </a>
+              <button class="btn waves-effect waves-light btn-custom" type="submit" name="action">login</button>
+              <a class="btn waves-effect waves-light btn-custom" href="/createaccount">register</a>
             </form>
           </div>
         </div>
