completed database login styling

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,6 +26,9 @@
 <body>
 
 
+  <div class="image-container">
+    <img src="stub welcome banner.png" alt="Logo"> 
+  </div>
   
 
   <div class="container">
